Basic reader functionality
It can now read from a text file and can be started and stopped with a button.

--- a/WordRunnerSmartwatch/app/src/main/res/values/strings.xml
+++ b/WordRunnerSmartwatch/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">WordRunnerSmartwatchAndroid</string>
     <string name="hello_round">Hello Round World!</string>
-    <string name="hello_square">Hello Square World!</string>
+    <string name="word_display_square">Press Start to begin WordRunner</string>
 </resources>
